<resources>
    <!-- for MainActivity -->
    <string name="app_name">AmbitSync</string>
    <string name="folder_name">AmbitSync</string>
    <string name="choose_folder">Choose</string>
    <string name="action_settings">Settings</string>
    <string name="logcount">Moves</string>
    <string name="bat">Battery</string>
    <string name="disconnect_status">Disconnected</string>
    <string name="connect_status">Ambit\nConnected</string>
    <string name="connect_error">Connection\nError</string>
    <string name="sync_header_status">Syncing\nHeader</string>
    <string name="sync_move_status">Syncing\nMove</string>
    <string name="saving_to">GPX Path:</string>
    <string name="ext_not_available">External storage not available!</string>
    <string name="ext_no_permission">No permission to storage. Please enable in Setting!</string>
    <string name="ext_error">External storage error</string>
    <string name="info_text">Please use an OTG cable and\nconnect the Ambit watch using\nthe normal Ambit USB cable to this device.\n\nWhen connected, wait a few seconds for the USB permission dialog to appear.</string>

    <!-- for MoveInfoActivity -->
    <string name="gpx_downloaded">(GPX downloaded)</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="ascent">Ascent</string>
    <string name="descent">Descent</string>
    <string name="ascent_time">Ascent Time</string>
    <string name="descent_time">Descent Time</string>
    <string name="alt_max">Highest Altitude</string>
    <string name="alt_min">Lowest Altitude</string>
    <string name="temperature">Temperature</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="pte">PTE</string>
    <string name="recovery_time">Recovery Time</string>
    <string name="calories">Calories</string>
    <string name="cadence">Cadence</string>
    <string name="strava_token_key">strava_token</string>
    <string name="open_gpx">Open GPX</string>
    <string name="channel_name">AmbitSync</string>
    <string name="channel_description">AmbitSync Strava upload status</string>
    <string name="open_in_strava">Open in Strava</string>
    <string name="strava_url">https://www.strava.com/activities/</string>
    <string name="msg_upload_to_strava">Uploading to Strava...</string>
    <string name="msg_upload_failed">Upload failed</string>
    <string name="notification_title">AmbitSync Strava Upload</string>
</resources>
