<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="idv.markkuo.ambitsync.MoveInfoActivity">

    <GridLayout
        android:id="@+id/moveGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:columnCount="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="" />

            <TextView
                android:id="@+id/moveState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Large" />

            <TextView
                android:id="@+id/moveDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveDistanceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/moveSpeedText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/speed" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/moveSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveAscentText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/ascent" />

            <TextView
                android:id="@+id/moveDescentText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/descent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveAscent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/moveDescent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveAscentTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/ascent_time" />

            <TextView
                android:id="@+id/moveDescentTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/descent_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveAscentTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/moveDescentTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveAltMaxText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/alt_max" />

            <TextView
                android:id="@+id/moveAltMinText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/alt_min" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveAltMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/moveAltMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveTempText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/temperature" />

            <TextView
                android:id="@+id/moveHRText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/heart_rate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveTemp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/moveHR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/movePTEText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/pte" />

            <TextView
                android:id="@+id/moveRecoveryTimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/recovery_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/movePTE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/moveRecoveryTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveCaloriesText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/calories" />

            <TextView
                android:id="@+id/moveCadenceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/cadence" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/moveCalories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/moveCadence"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="2dp"
                android:text=""
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </LinearLayout>

    </GridLayout>

    <Button
        android:id="@+id/buttonOpenGPX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moveGridLayout"
        android:layout_margin="2dp"
        android:padding="2dp"
        android:text="@string/open_gpx" />

    <TextView
        android:id="@+id/moveFilePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonOpenGPX"
        android:layout_margin="2dp"
        android:text="" />

</RelativeLayout>