<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="idv.markkuo.ambitsync.MainActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:visibility="invisible"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" >
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/infoText"
        android:layout_above="@+id/linearLayout"
        android:gravity="center"
        android:text="@string/info_text" >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gridLayout"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/gpxOutputPathText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="invisible"
            tools:text="Path to external storage" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:columnCount="4"
        android:rowCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false">

        <TextView
            android:id="@+id/LogCountTextView"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:maxLines="2"
            android:text=""
            android:visibility="invisible"
            tools:text="XX Moves"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="center|bottom"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            tools:text="@string/bat"
            android:visibility="invisible"
            android:id="@+id/batteryTextView" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/batteryProgressBar"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center|bottom"
            android:visibility="invisible"
            android:animationResolution="@android:integer/config_mediumAnimTime"
            android:max="100" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/disconnect_status"
            android:textAlignment="center"
            android:textSize="14sp"
            android:maxLines="2"
            android:id="@+id/ambitStatusTextView" />

    </GridLayout>


</RelativeLayout>
